--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 							<p>The Digital Rhetorical Privacy Collective represents a coalition approach to studying privacy and surveillance in rhetoric, composition, and technical communication. Our goals are to develop pedagogical resources and merge academic and public discourse on these topics. DRPC Privacy Week is the outcome of a 2023 CCCC Emerging Researcher Award.<br />
 							</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<!--<span class="image"><img src="images/logo.jpg" alt="" /></span> -->
+                        <span><img src="images/logo.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
