--- a/drpcTeachingResources.html
+++ b/drpcTeachingResources.html
@@ -87,17 +87,40 @@
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>Assignments and Activities</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Reading Lists</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
+										<p>This page includes activities and assignments which can be used in various writing classrooms and adapted for any classroom. This section will evolve and expand as the DRP Collective welcomes new members. Please visit our Contact page if you would like to submit an assignment or activity related to digital privacy and surveillance to the DRP Collective!</p>
+                                        <h3> Assignments:</h3>
+                                         <p>View in <a href="media/Resume.pdf">PDF</a></p>
+                                       <p>View in <a href="media/Resume.pdf">PDF</a></p>
+                                      <p>View in <a href="media/Resume.pdf">PDF</a></p>
+                                        <p>View in <a href="media/Resume.pdf">PDF</a></p>
+                                        <h3>Reading Lists</h3>
+                                        <h3> Learning More About Biometric Technology: A DRPC Reading List</h3>
+										<p>
+
+Cultivated by Charles Woods
+
+This reading list takes an intersectional approach to introducing readers to the privacy and surveillance issues created through the use of some biometric technologies broadly, including wearables and genetic technologies:
+
+<li> Crenshaw, K. (2017). On intersectionality: Essential writings. New York, NY: The New Press.</li>
+<li>Chow-White, P. (2012). Genomic Databases and an Emerging Digital Divide in Biotechnology. In Nakamura, L., & Chow-White, P. (Eds.). Race after the Internet (pp. 271-290). New York: Routledge.</li>
+<li>Roberts, D. (2011). Fatal invention: How science, politics, and big business re-create racein the twenty-first century. New York: The New Press.</li>
+<li> Tham, J. & Duin, A. H. (2020). Digital literacy in an age of pervasive surveillance A case of wearable technology. </li>
+<li> In Beck E. & Campos, E.H. (Eds.) Privacy matters: Conversations about surveillance within and beyond the Classroom (pp. 93-112). Louisville, CO: University Press of Colorado. </li>
+<li> Van Ness, L. (2020, February 20). Dna databases are boon to police but menace to privacy, critics say. Pew Research Center. Retrieved from: https://www.pewtrusts.org/en/research-and-analysis/blogs/stateline/2020/02/20/dna-databases-are-boon-to-police-but-menace-to-privacy-critics-say.</li> </p>
+										<ul><section> 
+
+<h3>Getting Started with Privacy Policies: A DRPC Reading List</h3>
+                                            <p> 
+                                                Cultivated by Charles Woods</p>
+
+<p> This reading list serves as an introduction to studying the privacy policy, a genre which makes up the Terms of Service (ToS) of most digital spaces. Readers will gain critical context about privacy policies, learn how to analyze privacy policies, and identify strategies for how to integrate privacy policies into the classroom.</p>
+
+<li> Auxier, B., Rainie, L., Anderson, M., Perrin, A., Kumar, M., and Turner, E. (2019, November 15).  Americans and privacy: Concerned, confused, and feeling lack of control over their personal information. Pew Research Center. Retrieved from: https://www.pewresearch.org/internet/2019/11/15/americans-and-privacy-concerned-confused-and-feeling-lack-of-control-over-their-personal-information/.</li>
+<li>Beck, E. (2016). Who is Tracking You? A Rhetorical Framework for Evaluating Surveillance and Privacy Practices. In Apostel, S. & Folk, M. (Eds.). Establishing and evaluating digital ethos and online credibility, (pp. 66-84). Hershey, Pennsylvania: IGI Global.</li>
+<li>Hern, A. (2015, June 15). I read all the small print on the internet and it made me want to die. The Guardian. Retrieved from: https://www.theguardian.com/technology/2015/jun/15/i-read-all-the-small-print-on-the-internet. </li>
+<li>Waldman, A. E. (2018). Privacy, notice, and design. 21 Stanford Technology Law Review, 21 (1), pp. 74-127.</li>
+<li>Woods, Charles & Wilson, Noah. (2021). The rhetorical implications of data aggregations: Becoming a dividual in a data-driven world. The Journal of Interactive Technology & Pedagogy, 19, https://jitp.commons.gc.cuny.edu/the-rhetorical-implications-of-data-aggregation-becoming-a-dividual-in-a-data-driven-world/ </li></p>
+										</ul> 
 									</section>
 
 							</div>
