--- a/contacts.html
+++ b/contacts.html
@@ -51,11 +51,67 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Elements</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Contact Us</h2>
+							<p>Reach out to us for more information about The Digital Rhetorical Privacy Collective by filling out the form on this page! Or, if you are interested in submitting a reading list, assignment, or proposing an idea for the DRPC, please fill out the form.
+
+Facebook
+Twitter
+</p>
 						</header>
 
 						<!-- Text -->
+                        <section>
+								<h3>Form</h3>
+								<form method="post" action="#">
+									<div class="row gtr-uniform gtr-50">
+										<div class="col-6 col-12-xsmall">
+											<input type="text" name="name" id="name" value="" placeholder="Name" />
+										</div>
+										<div class="col-6 col-12-xsmall">
+											<input type="email" name="email" id="email" value="" placeholder="Email" />
+										</div>
+										<div class="col-12">
+											<select name="category" id="category">
+												<option value="">- Category -</option>
+												<option value="1">Manufacturing</option>
+												<option value="1">Shipping</option>
+												<option value="1">Administration</option>
+												<option value="1">Human Resources</option>
+											</select>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-low" name="priority" checked>
+											<label for="priority-low">Low Priority</label>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-normal" name="priority">
+											<label for="priority-normal">Normal Priority</label>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-high" name="priority">
+											<label for="priority-high">High Priority</label>
+										</div>
+										<div class="col-6 col-12-medium">
+											<input type="checkbox" id="copy" name="copy">
+											<label for="copy">Email me a copy of this message</label>
+										</div>
+										<div class="col-6 col-12-medium">
+											<input type="checkbox" id="human" name="human" checked>
+											<label for="human">I am a human and not a robot</label>
+										</div>
+										<div class="col-12">
+											<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+										</div>
+										<div class="col-12">
+											<ul class="actions">
+												<li><input type="submit" value="Send Message" class="primary" /></li>
+												<li><input type="reset" value="Reset" /></li>
+											</ul>
+										</div>
+									</div>
+								</form>
+							</section>
+<!-- 
 							<section>
 								<h3>Text</h3>
 								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -102,7 +158,7 @@
 							</section>
 
 						<!-- Lists -->
-							<section>
+							<!--<section>
 								<h3>Lists</h3>
 								<div class="row">
 									<div class="col-6 col-12-xsmall">
@@ -192,10 +248,10 @@
 										</ul>
 									</div>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Table -->
-							<section>
+							<!-- <section>
 								<h3>Table</h3>
 								<h4>Default</h4>
 								<div class="table-wrapper">
@@ -287,10 +343,10 @@
 										</tfoot>
 									</table>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Buttons -->
-							<section>
+							<!-- <section>
 								<h3>Buttons</h3>
 								<ul class="actions">
 									<li><a href="#" class="button primary">Primary</a></li>
@@ -323,10 +379,10 @@
 									<li><span class="button primary disabled">Primary</span></li>
 									<li><span class="button disabled">Default</span></li>
 								</ul>
-							</section>
+							</section> -->
 
 						<!-- Form -->
-							<section>
+						<!--	<section>
 								<h3>Form</h3>
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -377,9 +433,9 @@
 									</div>
 								</form>
 							</section>
-
+<!--
 						<!-- Image -->
-							<section>
+							<!--<section>
 								<h3>Image</h3>
 								<h4>Fit</h4>
 								<div class="box alt">
@@ -408,8 +464,8 @@
 					</div>
 				</div>
 
-			<!-- Footer -->
-				<footer id="footer">
+			<!-- Footer --> -->
+				<!-- <footer id="footer">
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -423,10 +479,10 @@
 					</ul>
 				</footer>
 
-		</div>
+		</div>-->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+		<!-- Scripts 
+			<!--<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -434,6 +490,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+-->
 	</body>
 </html>
