Menu change and home page

--- a/digitalResources.html
+++ b/digitalResources.html
@@ -33,6 +33,8 @@
         </ul>
     </nav>
     </header>
+
+
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
@@ -81,10 +83,8 @@
                                       <p>View in <a href="media/Resume.pdf">PDF</a></p>
                                         <p>View in <a href="media/Resume.pdf">PDF</a></p>
                                         <h3>Reading Lists</h3>
-                                        <h3> Learning More About Biometric Technology: A DRPC Reading List</h3>
+                                        <h3> Learning More About Biometirc Technology: A DRPC Reading List Cultivated by Charles Woods</h3>
 										<p>
-
-Cultivated by Charles Woods
 
 This reading list takes an intersectional approach to introducing readers to the privacy and surveillance issues created through the use of some biometric technologies broadly, including wearables and genetic technologies:
 
@@ -94,20 +94,13 @@ This reading list takes an intersectional approach to introducing readers to the
 <li> Tham, J. & Duin, A. H. (2020). Digital literacy in an age of pervasive surveillance A case of wearable technology. </li>
 <li> In Beck E. & Campos, E.H. (Eds.) Privacy matters: Conversations about surveillance within and beyond the Classroom (pp. 93-112). Louisville, CO: University Press of Colorado. </li>
 <li> Van Ness, L. (2020, February 20). Dna databases are boon to police but menace to privacy, critics say. Pew Research Center. Retrieved from: https://www.pewtrusts.org/en/research-and-analysis/blogs/stateline/2020/02/20/dna-databases-are-boon-to-police-but-menace-to-privacy-critics-say.</li> </p>
-										<ul><section> 
-
-<h3>Getting Started with Privacy Policies: A DRPC Reading List</h3>
-                                            <p> 
-                                                Cultivated by Charles Woods</p>
-
-<p> This reading list serves as an introduction to studying the privacy policy, a genre which makes up the Terms of Service (ToS) of most digital spaces. Readers will gain critical context about privacy policies, learn how to analyze privacy policies, and identify strategies for how to integrate privacy policies into the classroom.</p>
-
-<li> Auxier, B., Rainie, L., Anderson, M., Perrin, A., Kumar, M., and Turner, E. (2019, November 15).  Americans and privacy: Concerned, confused, and feeling lack of control over their personal information. Pew Research Center. Retrieved from: https://www.pewresearch.org/internet/2019/11/15/americans-and-privacy-concerned-confused-and-feeling-lack-of-control-over-their-personal-information/.</li>
-<li>Beck, E. (2016). Who is Tracking You? A Rhetorical Framework for Evaluating Surveillance and Privacy Practices. In Apostel, S. & Folk, M. (Eds.). Establishing and evaluating digital ethos and online credibility, (pp. 66-84). Hershey, Pennsylvania: IGI Global.</li>
-<li>Hern, A. (2015, June 15). I read all the small print on the internet and it made me want to die. The Guardian. Retrieved from: https://www.theguardian.com/technology/2015/jun/15/i-read-all-the-small-print-on-the-internet. </li>
-<li>Waldman, A. E. (2018). Privacy, notice, and design. 21 Stanford Technology Law Review, 21 (1), pp. 74-127.</li>
-<li>Woods, Charles & Wilson, Noah. (2021). The rhetorical implications of data aggregations: Becoming a dividual in a data-driven world. The Journal of Interactive Technology & Pedagogy, 19, https://jitp.commons.gc.cuny.edu/the-rhetorical-implications-of-data-aggregation-becoming-a-dividual-in-a-data-driven-world/ </li></p>
-										</ul> 
+										<ul>
+											<li>Faucibus orci lobortis ac adipiscing integer.</li>
+											<li>Col accumsan arcu mi aliquet placerat.</li>
+											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
+											<li>Blandit massa non blandit tempor interdum.</li>
+											<li>Lacinia mattis arcu nascetur lobortis.</li>
+										</ul>
 									</section>
 
 							</div>
