--- a/drpcBlog.html
+++ b/drpcBlog.html
@@ -16,35 +16,24 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">DRPC</a>
-								<ul>
-									<li><a href="drpcInTheField.html">DRPC in the Field</a></li>
-									<li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
-									<li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
-                                    <li><a href="drpcBlog.html">DRPC Blog</a></li>
-									<li>    
-										<a href="#">DRPC Digital Resources</a>
-										<ul>
-											<li><a href="#">Resource 1</a></li>
-											<li><a href="#">Resource 2</a></li>
-											<li><a href="#">Resource 3</a></li>
-											<li><a href="#">Resource 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="advisoryBoard.html">Advisory Board</a></li>
-                            <li><a href="contacts.html">Contact Us</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+    <nav id="nav">
+        <ul>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="drpcInTheField.html">DRPC In the Field</a></li>
+            <li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
+            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li><a href="drpcBlog.html">Blog</a></li>
+            <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
+            <li><a href="digitalResources.html">Digital Resources</a></li>
+            <li><a href="advisoryBoard.html">Advisory Board</a></li>
+            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
+        </ul>
+    </nav>
+    </header>
+
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
