--- a/drpcNewsletter.html
+++ b/drpcNewsletter.html
@@ -18,7 +18,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-	<header id="header">
+<header id="header">
     <nav id="nav">
         <ul>
             <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
@@ -35,12 +35,11 @@
         </ul>
     </nav>
     </header>
-
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Advisory Board</h2>
+							<h2>DRPC Newsletter</h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 
