--- a/index.html
+++ b/index.html
@@ -15,54 +15,45 @@
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">DRPC</a>
-								<ul>
-									<li><a href="drpcInTheField.html">DRPC in the Field</a></li>
-									<li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
-									<li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
-                                    <li><a href="drpcBlog.html">DRPC Blog</a></li>
-									<li>    
-										<a href="#">DRPC Digital Resources</a>
-										<ul>
-											<li><a href="#">Resource 1</a></li>
-											<li><a href="#">Resource 2</a></li>
-											<li><a href="#">Resource 3</a></li>
-											<li><a href="#">Resource 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="advisoryBoard.html">Advisory Board</a></li>
-                            <li><a href="contacts.html">Contact Us</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+    <!-- Header -->
+    <header id="header">
+    <nav id="nav">
+        <ul>
+            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="drpcInTheField.html">DRPC In the Field</a></li>
+            <li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
+            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
+            <li><a href="drpcBlog.html">Blog</a></li>
+            <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
+            <li><a href="digitalResources.html">Digital Resources</a></li>
+            <li><a href="advisoryBoard.html">Advisory Board</a></li>
+            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
+        </ul>
+    </nav>
+    </header>
 
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>DRPC - Digital Rhetorical Podcast Collective</h2>
-							<p>The Digital Rhetorical Privacy Collective represents a coalition approach to studying privacy and surveillance in rhetoric, composition, and technical communication. Our goals are to develop pedagogical resources and merge academic and public discourse on these topics. DRPC Privacy Week is the outcome of a 2023 CCCC Emerging Researcher Award.<br />
+                            <p></p>
+                            <h2 style="text-align:center;">DRPC - Digital Rhetorical Podcast Collective</h2>
+                            <p style="text-align:center;">The Digital Rhetorical Privacy Collective represents a coalition approach to studying privacy and surveillance in rhetoric, composition, and technical communication. Our goals are to develop pedagogical resources and merge academic and public discourse on these topics. DRPC Privacy Week is the outcome of a 2023 CCCC Emerging Researcher Award.</p>
+							<p><br />
 							</p>
 						</header>
 						<!--<span class="image"><img src="images/logo.jpg" alt="" /></span> -->
-                        <span><img src="images/logo.jpg" alt="" /></span>
+                        <p></p>
+                        <span><img src="images/studentproject.jpg" alt="logo" class="centerpic" height=450 /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/banner.jpg" height=200 alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -78,7 +69,7 @@
 </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Register Here</p>
+                                    <a href="https://usu-edu.zoom.us/meeting/register/tZAvf-2opzMtHdPoap5U5v7t39Sx68lhEne9">Register Here</a>
 								</div>
 							</div>
 						</div>
@@ -88,7 +79,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic05.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h3>Tuesday, January 23, 2024: “Beyond the Panopticon: A Surveillance Student Project Showcase“</h3>
@@ -96,7 +87,7 @@
 						</header>
 						<p1>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents, “Beyond the Panopticon,” a showcase of student work from Dr. Noah Wason’s “Surveillance and Social Media” writing course at SUNY Binghamton University. This event has two components: an asynchronous showcase of select course projects and a Q+A panel with the students that created them.</p1>
 						<ul class="actions">
-							<li><a href="#" class="button">Register Here</a></li>
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfzlYyOSWOtNvAfGTUIrDVOr0_HvM_Cu2QoXTsR5x-DFYFyLw/viewform" class="button">Register Here</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -112,7 +103,7 @@
 						</header>
 						<p3>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents a virtual event via Zoom that originates from Texas A&M University-Commerce. This keynote will feature Dr. Sarah Young, Lecturer and Researcher at Erasmus University Rotterdam, Dr. Maria Novotny, Assistant Professor in the English department at University of Wisconsin-Milwaukee, Dr. Christina Cedillo, Associate Professor of Writing and Rhetoric at the University of Houston-Clear Lake. This event is organized by Dr. Charles Woods and Dr. Gavin Johnson at Texas A&M University Commerce.</p3>
 						<ul class="actions">
-							<li><a href="#" class="button">Register Here</a></li>
+							<li><a href="https://tamuc.zoom.us/meeting/register/tJIpc-muqDMsHtNm29CL05NMaKX1GkS3zdNF#/registration" class="button">Register Here</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -125,45 +116,47 @@
 							<h2>Tuesday, January 23, 2024: Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry on College Campuses: TAMUC Waters Library Workshop Series </h2>
                             <p>12:00am-1:00pm EST – Velma K. Waters Library (2nd Floor) at TAMUC and Zoom</p>
 							<p>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents, a workshop series of A.P. Anderson (Research and Instruction Librarian), Zephyr Rankin (Marketing and Communications Librarian), and Dr. Gavin P. Johnson (Director of Writing and Assistant Professor of English) in conversation on issues related to the privacy and intellectual property of LGBTQIA+ communities and the future of free inquiry on college campuses. This conversation comes at a time when LGBTQIA+, especially trans, communities are surveilled and our stories and intellectual contributions are being targeted and removed from library collections across the country. Anderson, Rankin, and Johnson offer insight on the role technology plays in this discourse through a dialogue followed by a Q&A from the audience.</p>
-                            <p> Register Here</p>
+                            <p></p>
+                            <a href="https://tamuc.libcal.com/calendar/workshops/Privacy">Register Here</a>
+                            <p></p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3></h3>
+									<p></p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Home</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -176,9 +169,10 @@
 							<h2>Thursday, January 25, 2024: “Black Feminism, Reproductive Justice, and Digital Surveillance”</h2>
                             <p>4:30pm-5:30pm EST – Tawes Building Room 2115 at UMD and Zoom</p>
 							<p>University of Maryland–College Park: The @UMDEnglish Language, Writing, & Rhetoric Event Series in collaboration with the Digical Rhetorical Privacy Collective present: “Reproduction & Medical Technology in the Age of ‘Crisis’” a talk by Dr. Mali Collins. This talk investigates the rhetoric of “crisis” as it pertains to the “Black Maternal Health Crisis”, and the ways ‘crisis” navigates as a bull horn to necessitate the over medicalization and mis-/and overuse of reproductive technologies on and for black birthing people. Thursday 1/25 4:30-5:30pm Tawes Building Rm 2115 and via Zoom.</p>
-                            <p>Register Here</p>
+                            <a href="https://english.umd.edu/events/language-writing-and-rhetoric-speaker-series-dr-mali-collins-reproduction-and-medical">Register Here</a>
+                            <p></p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="post" action="./signUp.html" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
