--- a/signUp.html
+++ b/signUp.html
@@ -18,7 +18,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-	<header id="header">
+    <header id="header">
     <nav id="nav">
         <ul>
             <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
@@ -35,49 +35,93 @@
         </ul>
     </nav>
     </header>
-
+            
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Advisory Board</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Sign Up</h2>
+							<p>Reach out to us for more information about The Digital Rhetorical Privacy Collective by filling out the form on this page! Or, if you are interested in submitting a reading list, assignment, or proposing an idea for the DRPC, please fill out the form.
+
+Facebook
+Twitter
+</p>
 						</header>
 
 						<!-- Text -->
+                        <section>
+								<h3>Form</h3>
+								<form method="post" action="#">
+									<div class="row gtr-uniform gtr-50">
+										<div class="col-6 col-12-xsmall">
+											<input type="text" name="name" id="name" value="" placeholder="Name" />
+										</div>
+										<div class="col-6 col-12-xsmall">
+											<input type="email" name="email" id="email" value="" placeholder="Email" />
+										</div>
+										<div class="col-12">
+											<select name="category" id="category">
+												<option value="">- Category -</option>
+												<option value="1">Manufacturing</option>
+												<option value="1">Shipping</option>
+												<option value="1">Administration</option>
+												<option value="1">Human Resources</option>
+											</select>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-low" name="priority" checked>
+											<label for="priority-low">Low Priority</label>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-normal" name="priority">
+											<label for="priority-normal">Normal Priority</label>
+										</div>
+										<div class="col-4 col-12-medium">
+											<input type="radio" id="priority-high" name="priority">
+											<label for="priority-high">High Priority</label>
+										</div>
+										<div class="col-6 col-12-medium">
+											<input type="checkbox" id="copy" name="copy">
+											<label for="copy">Email me a copy of this message</label>
+										</div>
+										<div class="col-6 col-12-medium">
+											<input type="checkbox" id="human" name="human" checked>
+											<label for="human">I am a human and not a robot</label>
+										</div>
+										<div class="col-12">
+											<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+										</div>
+										<div class="col-12">
+											<ul class="actions">
+												<li><input type="submit" value="Send Message" class="primary" /></li>
+												<li><input type="reset" value="Reset" /></li>
+											</ul>
+										</div>
+									</div>
+								</form>
+							</section>
+<!-- 
 							<section>
-								<h3>Morgan Banville</h3>
-                                <p>ABD, Graduate Student, East Carolina University</p>
-								<p><b>Morgan Banville</b> is a Ph.D. Candidate at East Carolina University. She is from Dartmouth, MA, and is a 2018 and 2019 graduate of the University of Massachusetts Dartmouth. In 2018, she graduated as a Massachusetts Commonwealth Scholar and summa cum laude with her degree in English Literature and Criticism, and Writing, Rhetoric, and Communication. As a Ph.D. Candidate, her research interests include the intersection of technical communication and surveillance studies, often informed by feminist methodologies. You can find her recent work in the Proceedings of the 38th and 39th ACM International Conference on Design of Communication, as well as Programmatic Perspectives, The Dangling Modifier, The Peer Review Journal, and the Journal of Technical Writing and Communication.
-                                 <span><img src="images/photo1.JPG" alt="" /></span>
-								<header>
-									<h3>Dr. Chen Chen </h3>
-									<p>Assistant Professor of English, Winthrop University</p>
-								</header>
-								<p><b>Dr. Chen Chen </b>(she/her/hers) is an incoming assistant professor of English in technical communication and rhetoric at Utah State University. After completing her Ph.D. in Communication, Rhetoric, & Digital Media at North Carolina State University, she taught first-year writing and professional and technical writing courses at Winthrop University where she also coordinated internships. She’s a scholar and teacher of professional and technical communication, digital rhetoric and writing. Her research interests include crisis communication practices by grassroots efforts, and digital feminist rhetorics in China and global Chinese diasporic communities. Currently, she’s been studying the design of Chinese online gender hate campaigns enabled by nationalist surveillance and control.</p>
-                                <span><img src="images/photo2.JPG" alt="" /></span>
-								<header>
-									<h3>Dr. Gavin P. Johnson</h3>
-									<p>Assistant Professor of English, Texas A&M University-Commerce</p>
-								</header>
-								<p><b>Dr. Gavin P. Johnson </b>(he/him/his) specializes in multimodal writing, queer rhetorics, and community-engaged learning. He currently works as an assistant professor and the Director of Writing at Texas A&M University-Commerce. His research and service receive national recognition, including the 2021 NCTE/CCCC Lavender Rhetorics Dissertation Award for Excellence in Queer Scholarship, an Honorable Mention for the 2020 Computers and Composition Hugh Burns Best Dissertation Award, the 2016 NCTE/CCCC Gloria Anzaldúa Rhetorician Award, and the 2018 Kairos Service Award. His research is published or forthcoming in Rhetoric Society Quarterly, Computers and Composition, Literacy in Composition Studies, Composition Studies, Constellations: A Cultural Rhetorics Publishing Space, College Literacy and Learning, Spark: A 4C4Equality Journal, Peitho, and Pre/Text: A Journal of Rhetorical Theory, and various edited collections. He is a proud first- generation college graduate from southeast Louisiana. Learn more at gavinpjohnson.com.</p>
-                                <span><img src="images/photo3.JPG" alt="" /></span>
-                            <h3>Dr. Cecilia Shelton </h3>
-                                <p>Assistant Professor of English, University of Maryland </p>
-                                <p> <b> Dr. Cecilia D. Shelton</b>'s scholarship exists at the intersections of cultural rhetorics, technical communication, digital and embodied rhetorics and draws on Black feminism as a source of theory and praxis. In 2021, she earned both the CCCC Outstanding Dissertation Award in Technical Communication and the CCCC Technical and Scientific Communication Award in the category of Best Article on Pedagogy or Curriculum in Technical or Scientific Communication. Her work can be found in journals such as Technical Communication Quarterly, The Journal of Multimodal Rhetorics, and IEEE. She is currently an Assistant Professor of Language, Writing, and Rhetoric in the Department of English at the University of Maryland, College Park.</p>
-                        <span><img src="images/photo4.JPG" alt="" /></span>
+								<h3>Text</h3>
+								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+								This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+								This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+
 								<hr />
-                        <h3> Dr. Noah P. Wason </h3>
-                            <p> Visiting Instructor of Writing and Rhetoric, Colgate University </p>
-                         <p> <b> Dr. Noah Wason </b> is a Visiting Instructor of Writing and Rhetoric at Colgate University who will be joining Binghamton University’s Writing Initiative this Fall. His research focuses on the intersections between rhetorical theory and technology, notably the connections between ethos and the algorithmic technologies that power social media platforms. His dissertation addresses recent trends in social media content recommendation algorithms that have led to increased political polarization in the United States and the proliferation of radicalizing conspiracy theories such as Qanon and #StoptheSteal. His research has appeared in Rhetoric Review, Rhetoric of Health & Medicine, the Journal of Interactive Technology and Pedagogy, and other venues. He recently completed his Ph.D. in Composition and Cultural Rhetoric at Syracuse University. </p>
-                                            <span><img src="images/photo5.JPG" alt="" /></span>
-                              
-                        <h3> Dr. Charles Woods </h3>
-                        <p> Teaching Assistant Professor, Texas A&M University-Commerce </p>
-                        <p> <b> Dr. Charles Woods </b> is an Assistant Professor at Texas A&M University-Commerce. He completed his Ph.D. at Illinois State University in 2021. Charles studies how society understands digital privacy and his research positions privacy policies as the sites where we can learn about and teach about digital privacy. Out of his work in graduate school came the Digital Rhetorical Privacy Collective—an interactive, online resource for those interested in learning more about digital privacy. Recently, he has contributed to The Journal of Interactive Technology and Pedagogy, Computers and Composition, and Writing Spaces. He is the creator and host of the award-winning The Big Rhetorical Podcast.
-                        <p> </p>
-                        <span><img src="images/photo6.JPG" alt="" /></span>
- </p>
+
+								<header>
+									<h3>Heading with a Subtitle</h3>
+									<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+								</header>
+								<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+								<header>
+									<h4>Heading with a Subtitle</h4>
+									<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+								</header>
+								<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+
+								<hr />
+
 								<h2>Heading Level 2</h2>
 								<h3>Heading Level 3</h3>
 								<h4>Heading Level 4</h4>
@@ -103,7 +147,7 @@
 							</section>
 
 						<!-- Lists -->
-							<section>
+							<!--<section>
 								<h3>Lists</h3>
 								<div class="row">
 									<div class="col-6 col-12-xsmall">
@@ -193,10 +237,10 @@
 										</ul>
 									</div>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Table -->
-							<section>
+							<!-- <section>
 								<h3>Table</h3>
 								<h4>Default</h4>
 								<div class="table-wrapper">
@@ -288,10 +332,10 @@
 										</tfoot>
 									</table>
 								</div>
-							</section>
+							</section>-->
 
 						<!-- Buttons -->
-							<section>
+							<!-- <section>
 								<h3>Buttons</h3>
 								<ul class="actions">
 									<li><a href="#" class="button primary">Primary</a></li>
@@ -324,10 +368,10 @@
 									<li><span class="button primary disabled">Primary</span></li>
 									<li><span class="button disabled">Default</span></li>
 								</ul>
-							</section>
+							</section> -->
 
 						<!-- Form -->
-							<section>
+						<!--	<section>
 								<h3>Form</h3>
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -378,9 +422,9 @@
 									</div>
 								</form>
 							</section>
-
+<!--
 						<!-- Image -->
-							<section>
+							<!--<section>
 								<h3>Image</h3>
 								<h4>Fit</h4>
 								<div class="box alt">
@@ -409,8 +453,8 @@
 					</div>
 				</div>
 
-			<!-- Footer -->
-				<footer id="footer">
+			<!-- Footer --> -->
+				<!-- <footer id="footer">
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -424,10 +468,10 @@
 					</ul>
 				</footer>
 
-		</div>
+		</div>-->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+		<!-- Scripts 
+			<!--<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -435,6 +479,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+-->
 	</body>
 </html>
