--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <p></p>
                             <h2 style="text-align:left;">DRPC - Digital Rhetorical Podcast Collective</h2>
                             <p style="text-align:left;">The Digital Rhetorical Privacy Collective is a team that approaches studying, privacy, <br> and surveillance within rhetoric, composition, and technical communication.<br>
-							The goals and mission of the company is to collect and redistribute academic <br> teaching resources and discuss about educational topics for our audience.<br> 
+							The goals and mission of the organization is to collect and redistribute academic <br> teaching resources and discuss about educational topics for our audience.<br> 
 							We won the CCCC Emerging Researcher Award in 2023. <br> In 2024, we are planning to continue expanding our resources to the public.</p>
 							<p><br/>
 							</p>
@@ -80,7 +80,7 @@
 </p>
 								</div>
 								<div class="col-4 col-12-medium">
-                                   <span class="image left"><img src="images/chatGpt.jpg" alt="" height=100 width=500 /></span>
+                                   <span><img src="images/poster5.jpg" alt="logo" height = 400/></span>
 								</div>
 							</div>
 						</div>
@@ -90,10 +90,11 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/zoom-culture.png" alt="" /></span>
+					<span class="image fit main"><img src="images/poster3.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h3>Tuesday, January 23, 2024: “Beyond the Panopticon: A Surveillance Student Project Showcase“</h3>
+							<h3> “Beyond the Panopticon: A Surveillance Student Project Showcase“</h3>
+                            <p> Tuesday, January 23, 2024:</p>
 							<p>Asynchronous</p>
 						</header>
 						<p>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents, “Beyond the Panopticon,” a showcase of student work from Dr. Noah Wason’s “Surveillance and Social Media” writing course at SUNY Binghamton University. This event has two components: an asynchronous showcase of select course projects and a Q+A panel with the students that created the projects.</p>
@@ -108,13 +109,14 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/video-conference.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/poster2.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h3><b>Friday, January 26, 2024: “Keynote Session: Privacy-Surveillance Rhetorics”</b></h3>
-							<p>3:30pm-5:00pm EST – Zoom</p>
+                            <h4>Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry on College Campuses: TAMUC Waters Library Workshop Series”</h4>
+                            <p>Tuesday, January 23, 2024</p>
+							<p>12:00pm-1:00pm EST – Velma K. Waters Library (2nd Floor) at TAMUC and Zoom</p>
 						</header>
-                        <p>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents a virtual event via Zoom that originates from Texas A&M University-Commerce. This keynote will feature Dr. Sarah Young, Lecturer and Researcher at Erasmus University Rotterdam, Dr. Maria Novotny, Assistant Professor in the English department at University of Wisconsin-Milwaukee, Dr. Christina Cedillo, Associate Professor of Writing and Rhetoric at the University of Houston-Clear Lake. </p>
+                        <p>University of Maryland–College Park: The @UMDEnglish Language, Writing, & Rhetoric Event Series and Digical Rhetorical Privacy Collective present a talk by Dr. Mali Collins. This talk investigates “crisis” pertaining to the “Black Maternal Health Crisis”, and how it navigates over medicalization and mis-use of reproductive technologies for black ethnicity.</p>
 						<ul class="actions">
 							<li>
                                <a href="https://tamuc.zoom.us/meeting/register/tJIpc-muqDMsHtNm29CL05NMaKX1GkS3zdNF#/registration" class="button small">Register Here</a>
@@ -135,8 +137,9 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Tuesday, January 23, 2024: Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry on College Campuses: TAMUC Waters Library Workshop Series</h3>
-                                            <p>12:00am-1:00pm EST – Velma K. Waters Library (2nd Floor) at TAMUC and Zoom</p>
+											<h3>Thursday, January 25, 2024: “Black Feminism, Reproductive Justice, and Digital Surveillance</h3>
+                                            <p>4:30pm-5:30pm EST – Tawes Building Room 2115 at UMD and Zoom</p>
+                                            <span><img src="images/poster4.jpg" alt="logo" height=300 /></span>
 										</section>
 									</section>
 
@@ -145,7 +148,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<p>The Digital Rhetorical Privacy Collective Privacy Week 2024 presents, a workshop series of A.P. Anderson (Research and Instruction Librarian), Zephyr Rankin (Marketing and Communications Librarian), and Dr. Gavin P. Johnson (Director of Writing and Assistant Professor of English) in conversation on issues related to the privacy and intellectual property of LGBTQIA+ communities and the future of free inquiry on college campuses. This conversation comes at a time when LGBTQIA+, especially trans, communities are surveilled and our stories and intellectual contributions are being targeted and removed from library collections across the country. Anderson, Rankin, and Johnson offer insight on the role technology plays in this discourse through a dialogue followed by a Q&A from the audience.</p>
+										<p>University of Maryland–College Park: The @UMDEnglish Language, Writing, & Rhetoric Event Series in collaboration with the Digical Rhetorical Privacy Collective present: “Reproduction & Medical Technology in the Age of ‘Crisis’” a talk by Dr. Mali Collins. This talk investigates the rhetoric of “crisis” as it pertains to the “Black Maternal Health Crisis”, and the ways ‘crisis” navigates as a bull horn to necessitate the over medicalization and mis-/and overuse of reproductive technologies on and for black birthing people. Thursday 1/25 4:30-5:30pm Tawes Building Rm 2115 and via Zoom.</p>
                                         <ul class="actions">
 													<li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzlYyOSWOtNvAfGTUIrDVOr0_HvM_Cu2QoXTsR5x-DFYFyLw/viewform" class="button small">Register Here</a></li>
 												</ul>
@@ -167,8 +170,9 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Thursday, January 25, 2024: “Black Feminism, Reproductive Justice, and Digital Surveillance”</h3>
-											<p>4:30pm-5:30pm EST – Tawes Building Room 2115 at UMD and Zoom</p>
+											<h3>Friday, January 26, 2024: “Keynote Session: Privacy-Surveillance Rhetorics</h3>
+											<p>3:30pm-5:00pm EST – Zoom</p>
+                                             <span><img src="images/poster1.png" alt="logo" height=300 /></span>
 										</section>
 									</section>
 
@@ -177,7 +181,7 @@
 
 								<!-- Content -->
 									<section id="content">
-                                        <p> University of Maryland–College Park: The @UMDEnglish Language, Writing, & Rhetoric Event Series in collaboration with the Digical Rhetorical Privacy Collective present: “Reproduction & Medical Technology in the Age of ‘Crisis’” a talk by Dr. Mali Collins. This talk investigates the rhetoric of “crisis” as it pertains to the “Black Maternal Health Crisis”, and the ways ‘crisis” navigates as a bull horn to necessitate the over medicalization and mis-/and overuse of reproductive technologies on and for black birthing people. Thursday 1/25 4:30-5:30pm Tawes Building Rm 2115 and via Zoom.</p>
+                                        <p> The Digital Rhetorical Privacy Collective Privacy Week 2024 presents a virtual event via Zoom that originates from Texas A&M University-Commerce. This keynote will feature Dr. Sarah Young, Lecturer and Researcher at Erasmus University Rotterdam, Dr. Maria Novotny, Assistant Professor in the English department at University of Wisconsin-Milwaukee, Dr. Christina Cedillo, Associate Professor of Writing and Rhetoric at the University of Houston-Clear Lake.</p>
                                         <ul class="actions">
 													<li> <a href="https://tamuc.libcal.com/calendar/workshops/Privacy" class="button small">Register Here</a></li>
 												</ul>
@@ -234,19 +238,19 @@
 												<td>Asynchronous</td>
 											</tr>
 											<tr>
-												<td>Friday, January 26, 2024, <br> 3:30pm-5:00pm</td>
-												<td><a href= "#three">Keynote Session: Privacy-Surveillance Rhetorics</a></td>
-												<td>Zoom</td>
-											</tr>
-											<tr>
-												<td>Tuesday, January 23, 2024, <br> 12:00pm-1:00pm</td>
-												<td><a href= "#four">Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry </a></td>
+                                                <td>Tuesday, January 23, 2024, <br> 12:00pm-1:00pm</td>
+												<td><a href= "#three">Privacy, IP, LBTQIA+ Communities, and the Future of Free Inquiry </a></td>
 												<td>Velma K. Waters Library (2nd Floor) at TAMUC and Zoom</td>
 											</tr>
 											<tr>
 												<td>Thursday, January 25, 2024, <br> 4:30pm-5:30pm</td>
-												<td><a href= "#five">Black Feminism, Reproductive Justice, and Digital Surveillance</a></td>
+												<td><a href= "#four">Black Feminism, Reproductive Justice, and Digital Surveillance</a></td>
 												<td>Tawes Building Room 2115 at UMD and Zoom</td>
+											</tr>
+											<tr>
+                                                <td>Friday, January 26, 2024, <br> 3:30pm-5:00pm</td>
+												<td><a href= "#five">Keynote Session: Privacy-Surveillance Rhetorics</a></td>
+												<td>Zoom</td>
 											</tr>
 										</tbody>
 										<tfoot>
