--- a/drpcInTheField.html
+++ b/drpcInTheField.html
@@ -20,7 +20,6 @@
     <nav id="nav">
         <ul>
             <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li><a href="index.html">Home</a></li>
             <li><a href="drpcInTheField.html">DRPC In the Field</a></li>
             <li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
             <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
@@ -33,7 +32,7 @@
         </ul>
     </nav>
     </header>
-			<!-- Main -->
+			<!-- Main 
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
@@ -41,9 +40,9 @@
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
+							<div class="col-4 col-4-medium">
 
-								<!-- Sidebar -->
+								<!-- Sidebar 
 									<section id="sidebar">
 										<section>
 											<h3>Magna Feugiat</h3>
@@ -70,7 +69,7 @@
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
 
-								<!-- Content -->
+								<!-- Content 
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>Awards and Grants</h3>
@@ -92,8 +91,90 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 
+				<div class="wrapper style1">
+						<div class="inner">
+							<div class="container">
+								<div class="row">
+								<div class="col-2"><p></p></div>
+									<div class="col-8 col-8-medium">
+										<!-- Article list -->
+											<section class="box2 article-list">
+												<h2 class="icon fa-file-alt"> DRPC In the Field</h2>
+                                                <p> This is a page with the list of awards, grants, and presentations showing DRPC in action in the field!</p>
+
+												<!-- Excerpt -->
+													<article class="box2 excerpt">
+														<a href="#" class="image left"><img src="images/award.jpeg" alt="" /></a>
+														<div>
+															<header>
+																<!--<span class="date">01</span>-->
+																<h3><a href="#">Awards and Grants</a></h3>
+															</header>
+															<p><li>NCTE/CCCC Emergent Research Grant, (2022-2023). This award is funded up to $10 000 each for proposals by the CCCC. The principal investigator must belong to CCCC at the time of submission of hte proposal. The proposed projects are expected to last to two years, but can run for shorter periods of time. </li></p>
+														</div>
+													</article>
+
+												<!-- Excerpt -->
+													<article class="box2 excerpt">
+														<a href="#" class="image right"><img src="images/slide.jpg" alt="" height=275 /></a>
+														<div>
+															<header>
+																<!--<span class="date">01</span>-->
+																<h3><a href="#">Presentations</a></h3>
+															</header>
+															<p><li> This presentation is by Johnson, Gavin P., Charles Woods, and Morgan Banville. (Feb. 17, 2023). The presentation is called: Teaching and learning about privacy and surveillance: Doing hope through the Digital Rhetorical Privacy Collective. It is by the Conference on College Composition and Communication in Chicago, IL.</li>
+                                                            <li>Presented by Woods, Charles, Gavin P. Johnson, Cecilia Shelton, and Noah Wason. (June 2023), this presentation is a hybrid resource for teaching and learning on privacy + surveillance: The Digital Rhetorical Privacy Collective. It <br> takes place in the <br>Computers and Writing Conference, Davis, CA.</li></p>
+														</div>
+													</article>
+
+												<!-- Excerpt -->
+													<article class="box2 excerpt">
+														<a href="#" class="image left"><img src="images/presentation.jpg" alt="" height=275 /></a>
+														<div>
+															<header>
+																<!--<span class="date">01</span>-->
+																<h3><a href="#">Link To Slides and Script</a></h3>
+                                                                <p3> Find out more about the script in detail of a copy of it in slides and document.</p3>
+															</header>
+															<p>
+                                                            <li><a href= "https://docs.google.com/presentation/d/1UZS_SzhBNEnXTGIAj7gvoUG2E0uc-DZ3YD4PsKXJM4c/edit?usp=sharing">Download Slides</a></li>
+                                                            <li><a href= "#https://docs.google.com/document/d/1xHZNhlx9wZ7CVYISDL6sHuuiX8hMa70rMBW7ohrxMqE/edit?usp=sharing">Download Script</a></li>
+                                                            </p>
+														</div>
+													</article>
+
+											</section>
+									</div>
+									<!--div class="col-4 col-12-medium">
+
+											<section class="box2 spotlight">
+												<h2 class="icon fa-file-alt">Spotlight</h2>
+												<article>
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt=""></a>
+													<header>
+														<h3><a href="#">Neural Implants</a></h3>
+														<p>The pros and cons. Mostly cons.</p>
+													</header>
+													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
+													quisturpis nisi consequat ornare in, hendrerit in lectus semper mod quis eget mi quat etiam
+													lorem. Phasellus quam turpis, feugiat sed et lorem ipsum dolor consequat dolor feugiat sed
+													et tempus consequat etiam.</p>
+													<p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
+													mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
+													<footer>
+														<a href="#" class="button alt icon solid fa-file-alt">Continue Reading</a>
+													</footer>
+												</article>
+											</section>
+									</div-->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
