--- a/drpcUsingResources.html
+++ b/drpcUsingResources.html
@@ -39,9 +39,9 @@
                         <header class="major">
 							<section>
 								<h2>Using DRPC Resources</h2>
-                                <p4> One of the goals of the DRPC is to create resources that intsructors can use or adapt to, in order to talk about digital privacy in their classrooms. This section of the DRPC website provides infomration on how to cite DRPC resources that you use, and how to list them on your CV or resume. It also lists any adaptations and other course materials from instructors that used DRPC resources in their writing classrooms. Do you use DRPC resources in your classroom? Please reach out to us and tell us how via our Contact page! </p4>
+                                <p3> One of the goals of the DRPC is to create resources that intsructors can use or adapt to, in order to talk about digital privacy in their classrooms. This section of the DRPC website provides infomration on how to cite DRPC resources that you use, and how to list them on your CV or resume. It also lists any adaptations and other course materials from instructors that used DRPC resources in their writing classrooms. Do you use DRPC resources in your classroom? Please reach out to us and tell us how via our Contact page! </p3>
                                 <p></p>
-                                <span><img src="images/digitalResources1.JPG" alt="logo" height=150 /></span>
+                                  <span><img src="images/digitalResources2.JPG" alt="logo" height=175/></span>
 							</section>
 						</header>
 						<div class="row gtr-150">
@@ -63,7 +63,7 @@
                                     <i>Full credit for the concept and design of [assignment name] goes to [author’s name], whose work is archived in the Digital Rhetorical Privacy Collective resources (linked here).</i>
                                     </div>
                                 <hr>
-								<h2> Adapted Assignments</h2>
+								<h3> Adapted Assignments: </h3>
                                 <i class='far fa-folder-open' style='font-size:48px;color:white'></i>
                                     <p></p>
                                  <p> This is a link to one of using DRPC's resources which is an adapted assignment.</p>
