--- a/drpcInTheField.html
+++ b/drpcInTheField.html
@@ -102,7 +102,7 @@
 										<!-- Article list -->
 											<section class="box2 article-list">
 												<h2 class="icon fa-file-alt"> DRPC In the Field</h2>
-                                                <p> This is a page with the list of awards, grants, and presentations showing DRPC in action in the field!</p>
+                                                <p> This is where you can find the list of awards, grants, and presentations showing DRPC in action in the field!</p>
 
 												<!-- Excerpt -->
 													<article class="box2 excerpt">
