menu changes and updates to pages

--- a/advisoryBoard.html
+++ b/advisoryBoard.html
@@ -146,8 +146,9 @@
 				<nav id="nav">
 					<ul>
 						<li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-						<li><a href="drpcInTheField.html">DRPC In the Field</a></li>
-						<li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
+						<li><a href="drpcInTheField.html">In the Field</a></li>
+						<li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
+                        <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
 						<li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
 						<li><a href="drpcBlog.html">Blog</a></li>
 						<li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
@@ -172,7 +173,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/MorganBanvilleUpdated.JPG" alt="" height=300 /></a>
+												<a href="#" class="image"><img src="images/morganBanville1.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName1">Dr. Morgan Banville</h3>
                                                     <p>Assistant Professor of Humanities at Massachusetts Maritime Academy</p>
@@ -183,7 +184,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/chenchen1.jpg" alt="" height = 300/></a>
+												<a href="#" class="image"><img src="images/chenchen1.jpg" alt="" height = 300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName2">Dr. Chen Chen</h3>
                                                     <p>Assistant Professor of English, Winthrop University</p>
@@ -194,7 +195,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/gavinjohnson.jpg" alt="" height=300 /></a>
+												<a href="#" class="image"><img src="images/gavinjohnson.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName3">Dr. Gavin P. Johnson</h3>
                                                     <p>Assistant Professor of English, Texas A&M University-Commerce</p>
@@ -221,7 +222,7 @@
 									<div class="row">
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/ceciliashelton.jpg" alt="" height=300/></a>
+												<a href="#" class="image"><img src="images/ceciliashelton1.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName4">Dr. Cecilia Shelton</h3>
                                                     <p>Assistant Professor of English, University of Maryland</p>
@@ -231,7 +232,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/noahwilson.png" alt="" height=300/></a>
+												<a href="#" class="image"><img src="images/noahwilson.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName5">Dr. Noah P. Wason</h3>
                                                     <p>Visiting Instructor of Writing and Rhetoric, Colgate University</p>
@@ -241,7 +242,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/charleswoods.jpg" alt="" height=300/></a>
+												<a href="#" class="image"><img src="images/charleswoods1.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName6">Dr. Charles Woods</h3>
                                                     <p>Teaching Assistant Professor, Texas A&M University-Commerce</p>
@@ -270,7 +271,7 @@
 									<div class="row">
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image"><img src="images/isabelleyam.jpg" alt="" height=300/></a>
+												<a href="#" class="image"><img src="images/isabelleYamUpdated.jpg" alt="" height=300 width=250/></a>
 												<header class="second icon solid fa-user">
                                                     <h3 id="myName7">Isabelle Yam</h3>
                                                     <p>DRPC Intern, York University Student</p>
