--- a/digitalResources.html
+++ b/digitalResources.html
@@ -21,8 +21,9 @@
         <ul>
             <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="drpcInTheField.html">DRPC In the Field</a></li>
-            <li><a href="drpcTeachingResources.html">DRPC Teaching Resources</a></li>
+            <li><a href="drpcInTheField.html">In the Field</a></li>
+            <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
+            <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
             <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
             <li><a href="drpcBlog.html">Blog</a></li>
             <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
