--- a/elements.html
+++ b/elements.html
@@ -18,90 +18,43 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-		<header id="header">
-    <nav id="nav">
-        <ul>
-            <li id="logo"><a href="index.html"><span><img src="images/minilogo.jpg" alt="logo" /></span></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="drpcInTheField.html">In the Field</a></li>
-            <li><a href="drpcTeachingResources.html">Teaching Resources</a></li>
-            <li><a href= "drpcReadingLists.html">Reading Lists</a></li>
-            <li><a href="drpcUsingResources.html">Using DRPC Resources</a></li>
-            <li><a href="drpcBlog.html">Blog</a></li>
-            <li><a href="drpcNewsletter.html" >Newsletter</a> </li> 
-            <li><a href="digitalResources.html">Digital Resources</a></li>
-            <li><a href="advisoryBoard.html">Advisory Board</a></li>
-            <li><a href="contacts.html">Contact Us</a></li>
-            <li><a href="signUp.html" class="button primary">Sign Up</a></li>
-        </ul>
-    </nav>
-    </header>
+				<header id="header">
+					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">Layouts</a>
+								<ul>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li>
+						</ul>
+					</nav>
+				</header>
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Contact Us</h2>
-							<p>Reach out to us for more information about The Digital Rhetorical Privacy Collective by filling out the form on this page! Or, if you are interested in submitting a reading list, assignment, or proposing an idea for the DRPC, please fill out the form.
-
-Facebook
-Twitter
-</p>
+							<h2>Elements</h2>
+							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 
 						<!-- Text -->
-                        <section>
-								<h3>Form</h3>
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall">
-											<input type="text" name="name" id="name" value="" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-xsmall">
-											<input type="email" name="email" id="email" value="" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<select name="category" id="category">
-												<option value="">- Category -</option>
-												<option value="1">Manufacturing</option>
-												<option value="1">Shipping</option>
-												<option value="1">Administration</option>
-												<option value="1">Human Resources</option>
-											</select>
-										</div>
-										<div class="col-4 col-12-medium">
-											<input type="radio" id="priority-low" name="priority" checked>
-											<label for="priority-low">Low Priority</label>
-										</div>
-										<div class="col-4 col-12-medium">
-											<input type="radio" id="priority-normal" name="priority">
-											<label for="priority-normal">Normal Priority</label>
-										</div>
-										<div class="col-4 col-12-medium">
-											<input type="radio" id="priority-high" name="priority">
-											<label for="priority-high">High Priority</label>
-										</div>
-										<div class="col-6 col-12-medium">
-											<input type="checkbox" id="copy" name="copy">
-											<label for="copy">Email me a copy of this message</label>
-										</div>
-										<div class="col-6 col-12-medium">
-											<input type="checkbox" id="human" name="human" checked>
-											<label for="human">I am a human and not a robot</label>
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="primary" /></li>
-												<li><input type="reset" value="Reset" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-<!-- 
 							<section>
 								<h3>Text</h3>
 								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -148,7 +101,7 @@ Twitter
 							</section>
 
 						<!-- Lists -->
-							<!--<section>
+							<section>
 								<h3>Lists</h3>
 								<div class="row">
 									<div class="col-6 col-12-xsmall">
@@ -238,10 +191,10 @@ Twitter
 										</ul>
 									</div>
 								</div>
-							</section>-->
+							</section>
 
 						<!-- Table -->
-							<!-- <section>
+							<section>
 								<h3>Table</h3>
 								<h4>Default</h4>
 								<div class="table-wrapper">
@@ -333,10 +286,10 @@ Twitter
 										</tfoot>
 									</table>
 								</div>
-							</section>-->
+							</section>
 
 						<!-- Buttons -->
-							<!-- <section>
+							<section>
 								<h3>Buttons</h3>
 								<ul class="actions">
 									<li><a href="#" class="button primary">Primary</a></li>
@@ -369,10 +322,10 @@ Twitter
 									<li><span class="button primary disabled">Primary</span></li>
 									<li><span class="button disabled">Default</span></li>
 								</ul>
-							</section> -->
+							</section>
 
 						<!-- Form -->
-						<!--	<section>
+							<section>
 								<h3>Form</h3>
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -423,9 +376,9 @@ Twitter
 									</div>
 								</form>
 							</section>
-<!--
+
 						<!-- Image -->
-							<!--<section>
+							<section>
 								<h3>Image</h3>
 								<h4>Fit</h4>
 								<div class="box alt">
@@ -454,8 +407,8 @@ Twitter
 					</div>
 				</div>
 
-			<!-- Footer --> -->
-				<!-- <footer id="footer">
+			<!-- Footer -->
+				<footer id="footer">
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -469,10 +422,10 @@ Twitter
 					</ul>
 				</footer>
 
-		</div>-->
+		</div>
 
-		<!-- Scripts 
-			<!--<script src="assets/js/jquery.min.js"></script>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -480,6 +433,6 @@ Twitter
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
--->
+
 	</body>
 </html>
